# Panoptic-Perception

./: .gitignore  README.md  pyproject.toml  requirements.txt
panoptic_perception/configs/models/: anchors_backup.txt  yolo-736-416-detection.cfg  yolo-768-1280-detection.cfg  yolo-detection-deform.cfg  yolo-detection-drivable-unet.cfg  yolo-detection-drivable.cfg  yolo-detection.cfg  yolo-lane-detect.cfg  yolop.cfg  yolov8-768-1280-detection-drivable.cfg  yolov8-768-1280-detection.cfg  yolov8-detection-anchorFree.cfg  yolov8-detection.cfg
panoptic_perception/configs/trainer/: README.md  train_kwargs.json  train_kwargs_depth_fog_stage2a.json  train_kwargs_optimized-yolov8p.json  train_kwargs_optimized.json  train_kwargs_optimized_denet.json  train_kwargs_optimized_drivable.json  train_kwargs_optimized_gdip.json  train_kwargs_teacher.json
panoptic_perception/dataset/: __init__.py  augmentations.py  bdd100k_class_mapping.py  bdd100k_dataset.py  enums.py  mosaic_augmentation.py  types.py  utils.py
panoptic_perception/dataset/adverse_weather/: __init__.py  _io.py  analysis.py  augmentors.py  config.py  dataset_builder.py  depth_estimators.py
panoptic_perception/losses/: __init__.py  depth_reconstruction.py  detection.py  loss_factory.py  multi_task_loss.py  segmentation.py
panoptic_perception/models/: __init__.py  aboutme.md  common.py  model_factory.py  models.py  teacher_model.py  transmission_head.py  types.py  utils.py
panoptic_perception/models/denet/: __init__.py  architecture.md  attention.py  lap_pyramid.py  net.py  trans_high.py  trans_low.py
panoptic_perception/models/gdip/: __init__.py  gdip.py  ip_operations.py  vision_encoder.py
panoptic_perception/scripts/: setup.sh
panoptic_perception/scripts/eval/: eval.py
panoptic_perception/scripts/experiments/: __init__.py
panoptic_perception/scripts/profiler/: bytes_estimators.py  main.py  profile.py  trace_models.py  utils.py
panoptic_perception/scripts/train/: train.py  train_fusion_teacher.py  train_teacher.py  train_v2.py
panoptic_perception/scripts/utils/: analyze_class_distributions.py  analyze_scene_attributes.py  compare_masks.py  compute_bdd100k_anchors.py  generate_bdd_seglabels.py  precompute_depth.py  sanity_check_fog_dataset.py
panoptic_perception/tests/: conftest.py  profile_dataset.py  test_config_parser.py  test_dataset.py  test_gdip.py  test_integration.py  test_trainer_init.py
panoptic_perception/trainer/: __init__.py  callbacks.py  teacher_trainer.py  trainer.py  trainer_args.py  trainer_optimizer.py  trainer_refactor.py  trainer_schedulers.py  utils.py
panoptic_perception/utils/: __init__.py  config_parser.py  detection_utils.py  evaluation_helper.py  lane_utils.py  logger.py  segmentation_utils.py  wandb_logger.py
(+38 files in other folders)
