[project]
name = "panoptic-perception"
version = "0.1.0"
description = "Multi-task panoptic perception for autonomous driving (BDD100K)"
requires-python = ">=3.10,<3.13"
readme = "README.md"

dependencies = [
    # Core numerics / vision
    "numpy>=1.26,<2.2",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "opencv-python-headless>=4.8",
    "Pillow>=10.0",

    # Deep learning
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchmetrics>=1.0",
    "transformers>=4.35",
    "huggingface-hub>=0.34",

    # Data augmentation
    "albumentations>=2.0,<2.1",

    # Inference backends (depth estimators)
    "onnx>=1.14",
    "onnxruntime>=1.16; sys_platform == 'darwin'",
    "onnxruntime-gpu>=1.16; sys_platform == 'linux'",

    # Experiment tracking + utilities
    "wandb>=0.16",
    "tqdm>=4.66",
    "PyYAML>=6.0",
    "gitpython>=3.1",
    "terminaltables>=3.1",

    # Plotting / analysis
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ipython>=8.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["panoptic_perception"]

# ---- Cross-platform torch handling ----
# Mac (arm64): use stock PyPI wheels (CPU + MPS).
# Linux (A100 server): use PyTorch's cu118 wheels.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
