[project]
name = "panoptic-perception"
version = "0.1.0"
description = "Panoptic perception training and experiments for multi-task driving perception."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "albumentations==2.0.3",
    "matplotlib==3.10.3",
    "numpy<2",
    "opencv-python-headless==4.10.0.84",
    "pandas==2.3.3",
    "pillow==11.0.0",
    "PyYAML==6.0.2",
    "requests==2.32.5",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "terminaltables==3.1.10",
    "torch==2.6.0+cu118",
    "torchaudio==2.6.0+cu118",
    "torchmetrics>=1.0.0",
    "torchvision==0.21.0+cu118",
    "tqdm==4.67.1",
    "transformers>=4.35.0",
    "accelerate",
    "safetensors",
    "wandb==0.23.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
